[tool.poetry]
name = "robottone"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
asana = "^0.10.3"
replit = "^2.0.0"
flask = "^1.1.2"
youtube-dl = "^2020.12.14"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
pandas = "^1.2.2"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
