[tool.poetry]
name = "robottone"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asana = "^0.10.3"
replit = "^2.0.0"
youtube-dl = "^2020.12.14"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
pandas = "^1.2.2"
tweepy = "^3.10.0"
cryptocompare = "^0.7.5"
flask = "^1.1.2"
"discord.py" = "^1.7.1"
python-weather = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
